2005-04-13  David Moore  <dcm@acm.org>

	* TODO: Updated
	* iptc-*.c: Removed some unnecessary header references.

2005-03-09  David Moore  <dcm@acm.org>

	* iptc-dataset.c: Improved the handling of datasets with zero-length
	data.

2005-03-07  David Moore  <dcm@acm.org>

	* iptc-jpeg.c (iptc_jpeg_seek_to_ps3): Fixed parsing error for some
	jpeg files.
	* NEWS: Updated for new release

2005-03-06  David Moore  <dcm@acm.org>

	* iptc-dataset.c, iptc-dataset.h: added date/time manipulation
	functions iptc_dataset_get_date(), iptc_dataset_get_time(),
	iptc_dataset_set_date(), and iptc_dataset_set_time().
	* configure.in: bumped version number to 0.1.1 and library
	current:revision:age to 1:0:1.

2005-03-02  David Moore  <dcm@acm.org>

	* iptc-dataset.h: Fixed copyright notice

2005-02-28  David Moore  <dcm@acm.org>

	* Initial version
