@@ -1,5 +1,7 @@
 2005-04-13  David Moore  <dcm@acm.org>
 
+	* iptc-jpeg.c: Skip over all headers in search of APP13 to improve
+	compatability with some applications.
 	* TODO: Updated
 	* iptc-*.c: Removed some unnecessary header references.
 
